appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: "?users&posts&feeds"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

# Navigate to another user profile
- extendedWaitUntil:
    visible:
        id: "bottomBarSearchBtn"
- tapOn:
    id: "bottomBarSearchBtn"
- tapOn: "Search"
- inputText: "b"
- tapOn:
    id: "searchAutoCompleteResult-bob.test"
- assertVisible:
    id: "profileView"

# Can follow/unfollow another user
- tapOn:
    id: "followBtn"
- tapOn:
    id: "unfollowBtn"

# Can mute/unmute another user
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Mute account"
- assertVisible: "Account Muted"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Unmute account"
- assertNotVisible: "Account Muted"
